added logging to mongodb

--- a/public/forms/ati-ci.html
+++ b/public/forms/ati-ci.html
@@ -57,8 +57,8 @@
                 This survey is used to understand how well you are acquainted with conversational interfaces. Some examples of conversational interfaces are Google Assistant, Siri and C.L.I.N.T Eastwood. This survey is based on the ATI Scale which measures the user's affinity towards using certain technological systems
             </p>
         </span>
-        <!--<form id="survey-form" action="https://send.pageclip.co/ssJ875Dr8gsBFokkWaOxD7zvXK70aOkU/ati-ci-task" class="pageclip-form" method="post">-->
-        <form id="survey-form" action="submitFormResponse" class="pageclip-form" method="post">
+        <form id="survey-form" action="https://send.pageclip.co/ssJ875Dr8gsBFokkWaOxD7zvXK70aOkU/ati-ci-task" class="pageclip-form" method="post">
+        <!--<form id="survey-form" action="submitFormResponse" class="pageclip-form" method="post">-->
             <input type="hidden" id="workerId" class="workerId" name="workerId" value="900">
             <input type="hidden" id="startTime" class="startTime" name="startTime" value="">
             <table style="width: 100%;">
@@ -250,11 +250,11 @@
                 duration: duration
             }
             //console.log(req);
-            //const result = $.post("/log-form-responses",
-            //    req,
-            //    function (data, status) {
-            //        console.log("Data: " + data + "\nStatus: " + status);
-            //    });
+            const result = $.post("/log-form-responses",
+                req,
+                function (data, status) {
+                    console.log("Data: " + data + "\nStatus: " + status);
+                });
 
             //console.log(result)
             lastActionTime = time;
