changed color scheme to be similar to gui

--- a/public/forms/ati-ci.html
+++ b/public/forms/ati-ci.html
@@ -21,7 +21,7 @@
         }
 
         .pageclip-form__submit {
-            background: #2196F3;
+            background: #0EAAA6;
             width: 20%;
             padding: 15px;
             margin: 0 auto;
@@ -48,7 +48,7 @@
 </head>
 <body>
     <div class="survey" style="margin: auto; width: 50%;">
-        <div class="header" style="margin: auto; text-align: center; background: #2196F3; height: 120px;">
+        <div class="header" style="margin: auto; text-align: center; background: #0EAAA6; height: 120px;">
             <span style="display: inline-block; vertical-align: middle; margin: auto; "><h2 style="color: #FFFFFF; font-size: 18pt; font-family: sans-serif; vertical-align: middle; display: inline-block">How well are you acquainted with Conversational Interfaces?</h2></span>
         </div>
 
@@ -167,7 +167,7 @@
             <label style="font-size: 14px">Any Comments Before We Start?</label><br>
             <input class="addedFeedback" type="textarea" name="addedFeedback">
             <br><hr>
-            <button type="submit" class="pageclip-form__submit" style="background: #2196F3; width: 20%; padding: 10px; margin: 0 auto; display: block">
+            <button type="submit" class="pageclip-form__submit" style="background: #0EAAA6; width: 20%; padding: 10px; margin: 0 auto; display: block">
                 <span style="color: #FFFFFF">Submit Response</span>
             </button>
 
