--- a/public/forms/resque.html
+++ b/public/forms/resque.html
@@ -26,7 +26,7 @@
         }
 
         .pageclip-form__submit {
-            background: #2196F3;
+            background: #0EAAA6;
             width: 20%;
             padding: 15px;
             margin: 0 auto;
@@ -53,7 +53,7 @@
 </head>
 <body>
     <div class="survey" style="margin: auto; width: 50%;">
-        <div class="header" style="margin: auto; text-align: center; background: #2196F3; height: 120px;">
+        <div class="header" style="margin: auto; text-align: center; background: #0EAAA6; height: 120px;">
             <span style="display: inline-block; vertical-align: middle; margin: auto; "><h2 style="color: #FFFFFF; font-size: 20pt; font-family: sans-serif; vertical-align: middle;">Tell Us What You Think Of The System</h2></span>
         </div>
         <form id="survey-form" action="https://send.pageclip.co/ssJ875Dr8gsBFokkWaOxD7zvXK70aOkU/exit-survey-form-resque" class="pageclip-form" method="post">
