--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                 </ul>
                 <p style="font-size:20px; margin-top:10%">
                     Once you have completed the provided task, please click on the button below to continue<br>
-                    <a href="https://fs11.formsite.com/V9PQWO/hnvnvvqayi/index.html"><button id="continue">Continue</button></a>
+                    <button id="continue">Continue</button></a>
             </aside>
         </div>
 
