bug fix name intent unmap yes/no

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                         <!--        Further, she prefers a place near the city centre and supermarkets.<br> She also prefers a studio compared to sharing.<br>-->
                     </p>
                     <script src="scenario.js"></script>
-                    <li style="font-size:20px">When you are ready, just write "the name of the student that you are emulating" on the interface to begin the conversation</li>
+                    <li style="font-size:20px">When you are ready, just write "the name of the student that is assigned to you in the scenario" on the chat box to begin the conversation</li>
 
                 </ul>
                 <p style="font-size:20px; margin-top:10%">
