minor css changes.

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                 </ul>
                 <p style="font-size:20px; margin-top:10%">
                     Once you have completed the provided task, please click on the button below to continue<br>
-                    <button id="continue">Continue</button></a>
+                    <button id="continue">Submit</button></a>
             </aside>
         </div>
 
