--- a/public/forms/ati-ci.html
+++ b/public/forms/ati-ci.html
@@ -192,8 +192,53 @@
         }
 
         // Get worker Id:
-        var params = (new URL(document.location)).searchParams;
+        const queryString = window.location.search;
+        var params = new URLSearchParams(queryString);
         var workerID = params.get("wid");
+        var condition = params.get("cnd");
+        var stage = params.get("stage");
+        var acc = params.get("acc");
+
+        var sid = 0;
+
+        // Get parameter values
+        switch (true) {
+            case (condition == 5) && (stage == 1):
+                sid = getRandomInt(1, 3);
+                acc = 0;
+                break;
+            case (condition == 5) && (stage == 2):
+                sid = getRandomInt(4, 6);
+                acc = 0;
+                break;
+            case (condition == 6) && (stage == 1):
+                sid = getRandomInt(1, 3);
+                acc = 1;
+                break;
+            case (condition == 6) && (stage == 2):
+                sid = getRandomInt(4, 6);
+                acc = 1;
+                break;
+            case (condition == 7) && (stage == 1):
+                sid = getRandomInt(4, 6);
+                acc = 0;
+                break;
+            case (condition == 7) && (stage == 2):
+                sid = getRandomInt(1, 3);
+                acc = 0;
+                break;
+            case (condition == 8) && (stage == 1):
+                sid = getRandomInt(4, 6);
+                acc = 1;
+                break;
+            case (condition == 8) && (stage == 2):
+                sid = getRandomInt(1, 3);
+                acc = 1;
+                break;
+            default:
+                alert("Incorrect condition or stage provided");
+        }
+
         // Get random scenario number
         // hardcoded number for now. Will fetch count from db preferably.
         var maxScenarioCount = 3;
@@ -215,12 +260,18 @@
 
         var sid = getRandomInt(1, maxScenarioCount);
 
-        var url = "/?wid=" + workerID + "&sid=" + sid;
+        var url = "/?cnd=" + condition + "&stage=" + stage+"&wid= " + workerID + " &sid=" + sid + " &acc=" + acc;
         window.onload = function () {
             var time = new Date();
             lastActionTime = time;
             console.log(lastActionTime);
             document.getElementById("startTime").value = time;
+
+            if (stage == 2) {
+                window.location.href = url;
+                event.preventDefault();
+            }
+
         };
 
         // Redirect to next stage
