--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
                 </strong>
             </div>
 
-            <button id="continue"">Submit</button></a>
+            <button id="continue">Continue</button></a>
         </aside>
 
         <meta name="viewport" content="width-device-width, initial-scale=1">
