Increased radio button size, Added max-width for 50% of view window

--- a/public/forms/ati-ci.html
+++ b/public/forms/ati-ci.html
@@ -34,6 +34,14 @@
             font-family: Verdana, Geneva, sans-serif;
         }
 
+        input[type=radio] {
+            margin: 10px;
+            -ms-transform: scale(2.5);
+            -webkit-transform: scale(2.5);
+            transform: scale(2.5);
+            border-radius: 0
+        }
+
         td {
             font-size: 10pt;
             border-bottom: 1px solid black;
