--- a/public/forms/resque.html
+++ b/public/forms/resque.html
@@ -9,6 +9,14 @@
             width: 100%;
         }
 
+        input[type=radio] {
+            margin: 10px;
+            -ms-transform: scale(2.5);
+            -webkit-transform: scale(2.5);
+            transform: scale(2.5);
+            border-radius: 0
+        }
+
         th.fr-highlighted {
             background: #888888;
             font-size: 20px;
