--- a/public/forms/ati-ci.html
+++ b/public/forms/ati-ci.html
@@ -300,11 +300,16 @@
             const result = $.post("/log-ati",
                 req,
                 function (data, status) {
+                    logFormAction("ATI Form Submission","Submit Button clicked.")
                     console.log("Data: " + data + "\nStatus: " + status);
+                })
+                .done(function () {
+                    window.location.href = url;
+                })
+                .fail(function () {
+                    logFormAction("ATI Form Submission", "Failed API Call")
                 });
-
-
-            window.location.href = url;
+            
             event.preventDefault();
         });
 
@@ -326,7 +331,7 @@
         function logFormAction(question, response) {
 
             var time = new Date();
-            var duration = time.getTime() - lastActionTime.getTime();
+            var duration = time - lastActionTime;
 
             var req = {
                 workerId: workerID,
